--- a/ATuaVoz/package.json
+++ b/ATuaVoz/package.json
@@ -13,11 +13,18 @@
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "framer-motion": "^11.12.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^7.0.1"
+    "react-particles": "^2.12.2",
+    "react-router-dom": "^7.0.1",
+    "tsparticles": "^3.7.1",
+    "tsparticles-interaction-particles-repulse": "^2.12.0",
+    "tsparticles-plugin-polygon-mask": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
