--- a/ATuaVoz/package.json
+++ b/ATuaVoz/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fileforge/pdfreader": "^0.1.46",
+    "@material-tailwind/react": "^2.1.10",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
