--- a/ATuaVoz/package.json
+++ b/ATuaVoz/package.json
@@ -2,8 +2,11 @@
   "name": "atuavoz",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://jnluis.github.io/ATuaVoz/",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build && cp dist/index.html dist/404.html",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -38,6 +41,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
