--- a/ATuaVoz/package.json
+++ b/ATuaVoz/package.json
@@ -14,10 +14,9 @@
   },
   "dependencies": {
     "@fileforge/pdfreader": "^0.1.46",
-    "@material-tailwind/react": "^2.1.10",
-    "@nextui-org/button": "^2.0.38",
-    "@nextui-org/navbar": "^2.0.37",
-    "@nextui-org/react": "^2.4.8",
+    "@heroui/button": "2.2.27",
+    "@heroui/navbar": "^2.2.25",
+    "@heroui/react": "^2.8.5",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
     "framer-motion": "^11.12.0",
@@ -33,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -44,7 +44,7 @@
     "gh-pages": "^6.2.0",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.1.17",
     "vite": "^6.0.1"
   }
 }
